--- a/readable_marxists.css
+++ b/readable_marxists.css
@@ -8,6 +8,11 @@ body p {
     font-size: 25px;
 }
 
-body p.fst {
+body p.quote {
+    font-size: 25px;
+    font-style: italic;
+}
+
+body p.fst, body p.endnote {
     font-size: 20px;
 }
