--- a/readable_marxists.css
+++ b/readable_marxists.css
@@ -1,15 +1,15 @@
 body {
     max-width: 900px;
     margin: auto !important;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 body p, body p.fst {
-    font-size: 25px;
+    font-size: 20px;
 }
 
-body p.quote {
-    font-size: 25px;
+body p.quote, blockquote {
+    font-size: 20px;
     font-style: italic;
 }
 
